# meridian-terminal

./: .gitattributes  CLAUDE.md  Cargo.toml  MERIDIAN.md  manager-state.md  session-log.md
.claude/: settings.json
app/: Cargo.toml
app/src/: app_state.rs  appearance.rs
app/src/launch_configs/: launch_config.rs
app/src/pane_group/: mod.rs
app/src/pane_group/pane/: meridian_agent_pane.rs  mod.rs
app/src/persistence/: sqlite.rs
app/src/settings/: font.rs
app/src/settings/import/: iterm_parser_tests.rs
app/src/settings_view/: appearance_page.rs
app/src/workspace/: action.rs  mod.rs  view.rs
app/src/workspace/view/: vertical_tabs.rs
crates/meridian_agents/: Cargo.toml
crates/meridian_agents/src/: lib.rs
crates/meridian_agents/tests/: integration.rs
crates/meridian_laniakea/: Cargo.toml
crates/meridian_laniakea/src/: lib.rs
crates/meridian_manager/: Cargo.toml
crates/meridian_manager/src/: lib.rs
crates/meridian_relay/: Cargo.toml
crates/meridian_relay/src/: lib.rs
crates/meridian_worktree/: Cargo.toml
crates/meridian_worktree/src/: lib.rs
crates/meridian_worktree/tests/: integration.rs
meridian/: crate-map.md
meridian/specs/: meridian_agents.md  meridian_laniakea.md  meridian_manager.md  meridian_relay.md  meridian_worktree.md  phase_2a_dispatch_bridge.md  phase_2b_manager_dispatch.md  phase_3_plan.md  phase_3a1_brand_font_theme.md  phase_3b_a_session_view.md  phase_3b_be_chat_polish.md  phase_3b_orchestration_ui.md
script/: meridian-dispatch.sh  meridian-record-session.sh  meridian-spawn-all.sh  meridian-spawn.sh  meridian-watch.sh
