[package]
name = "meridian_laniakea"
edition = "2024"
publish.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt"] }

[dev-dependencies]
tempfile.workspace = true
