[package]
name = "meridian_manager"
authors = ["Warp Team <dev@warp.dev>"]
version = "0.1.0"
edition = "2024"
publish.workspace = true
license.workspace = true
description = "Meridian Manager persona — orchestrator entry point for multi-agent routing"

[dependencies]
meridian_agents = { workspace = true }
meridian_laniakea = { workspace = true }
meridian_relay = { workspace = true }
meridian_worktree = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync"] }

[dev-dependencies]
chrono = { workspace = true }
command = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }
